# dl-experiments

./: README.md
ann/: classification.ipynb  requirements.txt
micrograd/: README.md  demo.ipynb  pyproject.toml
rl/: bandits.ipynb  basics.md  qlearning.ipynb  requirements.txt
rl/wh_robot/: agent.py  main.py
